fixed NPE on reference entities check + added basic controller tests for Propagation CF